--- a/partial/week/week.html
+++ b/partial/week/week.html
@@ -1,6 +1,6 @@
 <div class="span12" ng-controller="WeekCtrl">
 
-
+<h1>Week: {{yearWeek}}</h1>
   <ng-include src="'partial/week/project/project.html'"></ng-include>
   <ng-include src="'partial/week/user/user.html'"></ng-include>
 
