--- a/partial/week/project/project.html
+++ b/partial/week/project/project.html
@@ -1,4 +1,11 @@
 <div class="span12" ng-controller="WeekProjectCtrl">
+<div ng-repeat="project in projects">
+    <h2>{{ project.name }}</h2>
+    
+    <div ng-repeat="user in project.users">
+      {{user}}
+    </div>
 
+  </div>
 
 </div>
