--- a/partial/week/project/project.html
+++ b/partial/week/project/project.html
@@ -2,8 +2,8 @@
 <div ng-repeat="project in projects">
     <h2>{{ project.name }}</h2>
     
-    <div ng-repeat="user in project.users">
-      {{user}}
+    <div ng-repeat="(userName, user) in project.users">
+      {{userName}} : {{user}}
     </div>
 
   </div>
