--- a/partial/week/week.html
+++ b/partial/week/week.html
@@ -1,9 +1,14 @@
 <div class="span12" ng-controller="WeekCtrl">
 
 <h1>Week: {{yearWeek}}</h1>
-  <ng-include src="'partial/week/project/project.html'"></ng-include>
-  <ng-include src="'partial/week/user/user.html'"></ng-include>
-
+  <div class="row">
+    <div class="projects">
+      <ng-include src="'partial/week/project/project.html'"></ng-include>
+    </div>
+    <div class="users">
+      <ng-include src="'partial/week/user/user.html'"></ng-include>
+    </div>
+  </div>
   <div ng-repeat="hour in week.reported">
     {{ hour }}
   </div>
