--- a/partial/week/week.less
+++ b/partial/week/week.less
@@ -1,13 +1,5 @@
 div[ng-controller="WeekCtrl"]
 {
-  .projects{
-    float:left;
-    width: 50%;
-  }
-
-  .users{
-    float:right;
-    width: 50%;
-  }
-
+  font-family: "ITC Avant Garde Gothic Std", "Helvetica Neue";
+  line-height: 110%;
 }
