first visible result

--- a/css/app.less
+++ b/css/app.less
@@ -6,4 +6,5 @@
 @import "../partial/week/project/project.less";
 @import "../partial/week/user/user.less";
 @import "../partial/menu/menu.less";
+@import "../partial/tabs/tabs.less";
 /* Add Partial LESS Above */
