--- a/partial/week/week.html
+++ b/partial/week/week.html
@@ -1,12 +1,20 @@
-<div class="span12" ng-controller="WeekCtrl">
-
-<h1>Week: {{yearWeek}}</h1>
-  <div class="row">
-    <div class="projects">
-      <ng-include src="'partial/week/project/project.html'"></ng-include>
-    </div>
-    <div class="users">
-      <ng-include src="'partial/week/user/user.html'"></ng-include>
-    </div>
-  </div>
-</div>
+<ion-view title="{{yearWeek}}">
+  <ion-content>
+    <ion-slide-box on-slide-changed="slideHasChanged($index)">
+      <ion-slide>
+          <div class="projects">
+            <ng-include src="'partial/week/project/project.html'"></ng-include>
+          </div>
+          <div class="users">
+            <ng-include src="'partial/week/user/user.html'"></ng-include>
+          </div>
+      </ion-slide>
+      <ion-slide>
+        <div class="box yellow"><h1>YELLOW</h1></div>
+      </ion-slide>
+      <ion-slide>
+        <div class="box pink"><h1>PINK</h1></div>
+      </ion-slide>
+    </ion-slide-box>
+  </ion-content>
+</ion-view>
