--- a/partial/week/week.html
+++ b/partial/week/week.html
@@ -1,20 +1,16 @@
 <ion-view title="{{yearWeek}}">
   <ion-content>
     <ion-slide-box on-slide-changed="slideHasChanged($index)">
-      <ion-slide>
+      <ion-slide ng-repeat="yearWeek in weeks">
+        <div class="box">
+          <h1>Week: {{week.week}}</h1>
           <div class="projects">
             <ng-include src="'partial/week/project/project.html'"></ng-include>
           </div>
           <div class="users">
             <ng-include src="'partial/week/user/user.html'"></ng-include>
           </div>
+        </div>
       </ion-slide>
-      <ion-slide>
-        <div class="box yellow"><h1>YELLOW</h1></div>
-      </ion-slide>
-      <ion-slide>
-        <div class="box pink"><h1>PINK</h1></div>
-      </ion-slide>
-    </ion-slide-box>
   </ion-content>
 </ion-view>
