--- a/partial/week/week.less
+++ b/partial/week/week.less
@@ -1,5 +1,3 @@
-div[ng-controller="WeekCtrl"]
-{
-  font-family: "ITC Avant Garde Gothic Std", "Helvetica Neue";
-  line-height: 110%;
+.box{
+  height: 1136px;
 }
