--- a/partial/week/week.html
+++ b/partial/week/week.html
@@ -1,11 +1,36 @@
 <ion-nav-bar></ion-nav-bar>
 <ion-view title="Select user">
   <ion-content>
-    <ion-list>
-      <a ng-repeat="user in users" class="item item-icon-left item-icon-right" ui-sref="tab.user({user:user})">
-        <i class="icon ion-person"></i>
-        {{user.toUpperCase()}}
-        <i class="icon ion-ios7-arrow-forward"></i>
-      </a>
-    </ion-list>
+
+    <ion-slide-box>
+
+      <ion-slide ng-repeat="yearWeek in weeks">
+        <div class="box">
+          <h2>vecka {{yearWeek.week}}</h2>
+          
+
+          <ion-list class="card">
+            <a ng-repeat="user in users" class="item item-icon-left item-icon-right" ui-sref="tab.user({user:user})">
+              <i class="icon ion-person"></i>
+              {{user.toUpperCase()}}
+              <i class="icon ion-ios7-arrow-forward"></i>
+            </a>
+          </ion-list>
+        </div>
+        <div class="box">
+          <h2>Projekt</h2>
+          <nvd3-pie-chart
+              data="exampleData"
+              id="exampleId"
+              showLabels="true"
+              x="xFunction()"
+              y="yFunction()"
+              donut="true"
+              donutRatio=".5"
+              donutLabelsOutside="true">
+            <svg height="200"></svg>
+          </nvd3-pie-chart>
+        </div>
+      </ion-slide>
+    </ion-slide-box>
 </ion-view>
