weekproject and weekproject.user states, setting the current week does not work yet

--- a/css/app.less
+++ b/css/app.less
@@ -8,4 +8,6 @@
 @import "../partial/week/user/user.less";
 @import "../partial/menu/menu.less";
 @import "../partial/tabs/tabs.less";
+@import "../partial/projectWeek/projectWeek.less";
+@import "../partial/projectWeek/user/user.less";
 /* Add Partial LESS Above */
