--- a/partial/tabs/tabs.html
+++ b/partial/tabs/tabs.html
@@ -1,19 +1,16 @@
 <ion-tabs class="tabs-icon-top tabs-default">
 
 
-  <!-- Pets Tab -->
   <ion-tab title="Personal" icon="icon ion-person" href="#/tab/personal/">
     <ion-nav-view name="personal-tab"></ion-nav-view>
   </ion-tab>
 
 
-  <!-- Adopt Tab -->
-  <ion-tab title="Project" icon="icon ion-heart" href="#/tab/adopt">
-    <ion-nav-view name="adopt-tab"></ion-nav-view>
+  <ion-tab title="Project" icon="icon ion-heart" href="#/tab/project">
+    <ion-nav-view name="project-tab"></ion-nav-view>
   </ion-tab>
 
 
-  <!-- About Tab -->
   <ion-tab title="About" icon="icon ion-search" href="#/tab/about">
     <ion-nav-view name="about-tab"></ion-nav-view>
   </ion-tab>
