--- a/partial/tabs/tabs.html
+++ b/partial/tabs/tabs.html
@@ -1,12 +1,12 @@
+<ion-nav-bar></ion-nav-bar>
 <ion-tabs class="tabs-icon-top tabs-default">
 
-
-  <ion-tab title="Personal" icon="icon ion-person" href="#/tab/personal/">
+  <ion-tab title="Personal" icon="icon ion-person" ng-click="goToPersonal()">
     <ion-nav-view name="personal-tab"></ion-nav-view>
   </ion-tab>
 
 
-  <ion-tab title="Project" icon="icon ion-heart" href="#/tab/project">
+  <ion-tab title="Project" icon="icon ion-heart" ng-click="goToProjects()">
     <ion-nav-view name="project-tab"></ion-nav-view>
   </ion-tab>
 
@@ -14,6 +14,5 @@
   <ion-tab title="About" icon="icon ion-search" href="#/tab/about">
     <ion-nav-view name="about-tab"></ion-nav-view>
   </ion-tab>
-
 
 </ion-tabs>
