--- a/partial/week/week.html
+++ b/partial/week/week.html
@@ -10,7 +10,7 @@
           
 
           <ion-list class="card">
-            <a ng-repeat="user in users" class="item item-icon-left item-icon-right" ui-sref="tab.user({user:user})">
+            <a ng-repeat="user in users" class="item item-icon-left item-icon-right" ui-sref="tab.user({ yearweek: currentWeek, user:user })">
               <i class="icon ion-person"></i>
               {{user.toUpperCase()}}
               <i class="icon ion-ios7-arrow-forward"></i>
