--- a/partial/week/week.html
+++ b/partial/week/week.html
@@ -2,15 +2,12 @@
 <ion-view title="Select user">
   <ion-content>
 
-    <ion-slide-box>
-
+    <ion-slide-box on-slide-changed="weekSelect($index)" active-slide="activeSlider">
       <ion-slide ng-repeat="yearWeek in weeks">
         <div class="box">
           <h2>vecka {{yearWeek.week}}</h2>
-          
-
           <ion-list class="card">
-            <a ng-repeat="user in users" class="item item-icon-left item-icon-right" ui-sref="tab.user({ yearweek: currentWeek, user:user })">
+            <a ng-repeat="(user, summary) in users" class="item item-icon-left item-icon-right" ui-sref="tab.user({ yearweek: currentWeek, user:user })">
               <i class="icon ion-person"></i>
               {{user.toUpperCase()}}
               <i class="icon ion-ios7-arrow-forward"></i>
