--- a/partial/project/project.html
+++ b/partial/project/project.html
@@ -4,9 +4,9 @@
     <ion-slide-box on-slide-changed="weekSelect($index)" active-slide="activeSlider">
       <ion-slide ng-repeat="yearWeek in weeks">
         <div class="box">
-          <h2>vecka {{yearWeek}}</h2>
+          <h2>vecka {{yearWeek.week}}</h2>
           <ion-list class="card">
-              <a ng-repeat="project in projects" class="item item-icon-left item-icon-right" ui-sref="projectDetails({project: project.name})">
+              <a ng-repeat="project in yearWeek.projects" class="item item-icon-left item-icon-right" ui-sref="projectDetails({project: project.name})">
                 <i class="icon ion-person"></i>
                 {{project.name.toUpperCase()}}
                 <i class="icon ion-ios7-arrow-forward"></i>
