--- a/partial/project/project.html
+++ b/partial/project/project.html
@@ -1,4 +1,6 @@
+<!--
 <ion-nav-bar></ion-nav-bar>
+-->
 <ion-view title="Select project">
   <ion-content>
     <ion-slide-box on-slide-changed="weekSelect($index)" active-slide="activeSlider">
@@ -13,7 +15,7 @@
               </a>
           </ion-list>
         </div>
-      </ion-slide> 
+      </ion-list-slide>
     </ion-slide-box>
   </ion-content>
-</ion-view>   
+</ion-view>
