--- a/partial/personal/details/details.html
+++ b/partial/personal/details/details.html
@@ -5,11 +5,11 @@
 </ion-nav-bar>
 <ion-view title="{{user}}">
   <ion-content>
-    <ion-slide-box ng-show="user" on-slide-changed="slideHasChanged($index)" active-slide="activeSlide">
+    <ion-slide-box ng-show="user" on-slide-changed="weekSelect($index)" active-slide="activeSlide">
 
       <ion-slide ng-repeat="yearWeek in weeks">
         <div class="box">
-          <week yearweek="yearWeek" user="user"></week>
+          <week yearweek="activeWeek" user="user" ></week>
         </div>
       </ion-slide>
   </ion-content>
