Usercolors are on projectpages

--- a/css/general.less
+++ b/css/general.less
@@ -1,4 +1,8 @@
+body {
+  color: #25263B;
+}
 ion-content {
+  background: #F7F7F7;
   .slider {
     min-height: ~'calc(100vh - 50px)';
     padding-bottom: 40px;
@@ -6,5 +10,30 @@ ion-content {
       bottom: 30px;
       margin-bottom: 0;
     }
+  }
+}
+
+progress-bar {
+  position: absolute;
+  display: block;
+  content: ' ';
+  height: 50%;
+  left: 0;
+  z-index: -1;
+  opacity: 0.2;
+  &.progress-top {
+    top: 0;
+  }
+  &.progress-bottom {
+    bottom: 0;
+  }
+  &:hover {
+    opacity: 1;
+  }
+}
+
+a:hover {
+  progress-bar {
+    opacity: 1;
   }
 }
