--- a/partial/project/details/details.html
+++ b/partial/project/details/details.html
@@ -5,14 +5,19 @@
 </ion-nav-bar>
 <ion-view title="{{project}}">
   <ion-content>
-    <ion-slide-box active-slide="activeSlide" on-slide-changed="slideHasChanged($index)">
-      <ion-slide ng-repeat="yerWeek in weeks">
-        <a ng-repeat="(user, hours) in users" class="item item-icon-left item-icon-right" ui-sref="tab.user({user:user})">
-          <i class="icon ion-person"></i>
-            {{user.toUpperCase()}}
-            Planned: {{hours.planned}} | Reported: {{hours.reported}}
-          <i class="icon ion-ios7-arrow-forward"></i>
-        </a>  
+    <ion-slide-box on-slide-changed="weekSelect($index)" active-slide="activeSlider">
+      <ion-slide ng-repeat="yearWeek in weeks">
+        <div class="box">
+          <h2>vecka {{yearWeek.week}}</h2>
+          <ion-list class="card">
+            <a ng-repeat="(user, hours) in yearWeek.filteredUsers" class="item item-icon-left item-icon-right" ui-sref="personalDetails({user:user})">
+              <i class="icon ion-person"></i>
+                {{user.toUpperCase()}}
+                Planned: {{hours.planned}} | Reported: {{hours.reported}}
+              <i class="icon ion-ios7-arrow-forward"></i>
+            </a>  
+          </ion-list>  
+        </div>
       </ion-slide>  
     </ion-slide-box>
   </ion-content>
