--- a/css/app.less
+++ b/css/app.less
@@ -2,6 +2,7 @@
 
 /* Directive LESS */
 @import "../directive/week/week.less";
+@import "../directive/badge/badge.less";
 /* Add Directive LESS Above */
 
 /* Partial LESS */
