--- a/css/general.less
+++ b/css/general.less
@@ -8,9 +8,11 @@ ion-content {
 }
 
 ion-content {
+  .slider-slides {
+    min-height: ~'calc(100vh - 111px)';
+  }
   .slider {
-    min-height: ~'calc(100vh - 50px)';
-    padding-bottom: 40px;
+    padding-bottom: 20px;
     .slider-pager {
       bottom: 30px;
       margin-bottom: 0;
