--- a/partial/personal/personal.html
+++ b/partial/personal/personal.html
@@ -1,13 +1,9 @@
-<!--
 <ion-nav-bar></ion-nav-bar>
--->
-<ion-view title="Select user">
+<ion-view title="V{{activeWeek.week}}">
   <ion-content>
-
     <ion-slide-box on-slide-changed="weekSelect($index)" active-slide="activeSlider">
       <ion-slide ng-repeat="yearWeek in weeks">
         <div class="box">
-          <h2>vecka {{yearWeek.week}}</h2>
           <ion-list class="card">
             <a ng-repeat="(user, summary) in yearWeek.users" class="item item-icon-left item-icon-right" ui-sref="personalDetails({ user:user })">
               <badge user="user"></badge>
