Added summary for a project (buggy)

--- a/directive/donut-chart/donut-chart.less
+++ b/directive/donut-chart/donut-chart.less
@@ -9,4 +9,12 @@
     left: 50%;
     display: inline-block;
   }
+  .summary {
+    position: absolute;
+    text-align: center;
+    width: 100%;
+    top: 150px;
+    line-height: 0;
+    font-size: 30px;
+  }
 }
