Removed the avatar-service

--- a/partial/project/project.html
+++ b/partial/project/project.html
@@ -6,7 +6,7 @@
         <div class="box">
           <ion-list class="card">
             <a ng-repeat="project in yearWeek.projects" class="item item-icon-left item-icon-right" ui-sref="projectDetails({projectId: project.projectId})">
-              <i class="icon ion-person"></i>
+              <i class="icon ion-briefcase"></i>
               {{project.name.toUpperCase()}}
               <i class="icon ion-ios7-arrow-forward"></i>
             </a>
