work in progress

--- a/partial/personal/details/details.html
+++ b/partial/personal/details/details.html
@@ -7,6 +7,9 @@
         <div class="box">
           <week yearweek="activeWeek" user="user"></week>
         </div>
+
+        <div class="box"
       </ion-slide>
+    </ion-slide-box>
   </ion-content>
 </ion-view>
