--- a/partial/personal/details/details.html
+++ b/partial/personal/details/details.html
@@ -1,13 +1,14 @@
 <ion-nav-bar></ion-nav-bar>
 <ion-view title="V{{activeWeek.week}}">
   <ion-content>
-    <ion-slide-box ng-show="user" on-slide-changed="weekSelect($index)" active-slide="activeSlide">
+    <ion-slide-box ng-show="user" on-slide-changed="weekSelect($index)" active-slide="activeSlider">
 
       <ion-slide ng-repeat="yearWeek in weeks">
         <div class="box">
-          <week yearweek="activeWeek" user="user"></week>
+          <week projects="activeWeek.filteredProjects" user="user"></week>
         </div>
 
+        
       </ion-slide>
     </ion-slide-box>
   </ion-content>
