--- a/css/general.less
+++ b/css/general.less
@@ -16,6 +16,7 @@ ion-content {
     .slider-pager {
       bottom: 30px;
       margin-bottom: 0;
+      padding-top:30px;
     }
   }
 }
@@ -62,3 +63,5 @@ ion-content {
   }
 
 }
+
+
