--- a/partial/project/details/details.html
+++ b/partial/project/details/details.html
@@ -16,6 +16,7 @@
               <strong class="user">{{user.toUpperCase()}}</strong>
               Planned: <strong>{{hours.planned}}</strong>
               Reported: <strong>{{hours.reported}}</strong>
+              Calendar: <strong>{{hours.calendar}}</strong>
             </a>
           </ion-list>
         </div>
